<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_type"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle">
        <menu>
            <item android:id="@+id/menu_type_bitmap"
                android:title="@string/menu_title_infowindow_bitmap"
                app:showAsAction="ifRoom"/>
            <item android:id="@+id/menu_type_view"
                android:title="@string/menu_title_infowindow_view"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

    <item android:id="@+id/menu_mult"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle">
        <menu>
            <item android:id="@+id/menu_mult_enable"
                android:title="@string/menu_title_enable"
                app:showAsAction="ifRoom"/>
            <item android:id="@+id/menu_mult_close"
                android:title="@string/menu_title_close"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_title_show"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/menu_add_infowindow_default"
                android:title="@string/menu_title_default" />

            <item
                android:id="@+id/menu_add_infowindow_custom"
                android:title="@string/menu_title_custom" >
                <menu>
                    <item
                        android:id="@+id/menu_add_infowindow_custom_1"
                        android:title="@string/menu_title_style1" />
                    <item
                        android:id="@+id/menu_add_infowindow_custom_2"
                        android:title="@string/menu_title_style2" />
                </menu>
            </item>

        </menu>
    </item>

    <item
        android:id="@+id/menu_play"
        android:title="@string/menu_title_animation"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_title_hide"
        app:showAsAction="ifRoom"/>
</menu>