<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_title_add"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_add_line_simple"
                android:title="@string/menu_title_default"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_add_line_dash"
                android:title="@string/menu_title_line_dash"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_add_line_segment"
                android:title="@string/menu_title_line_segment"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_add_line_texture"
                android:title="@string/menu_title_line_texture"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menu_add_line_gradient"
                android:title="@string/menu_title_line_gradient"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_text"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_title_delete"
        app:showAsAction="ifRoom" />
</menu>